--- a/coreTracker.html
+++ b/coreTracker.html
@@ -10,7 +10,7 @@
     #video { position: absolute; top: 0; left: 0; z-index: -1; }
     #captureButton { position: absolute; top: 10px; left: 10px; z-index: 10; padding: 8px 12px; }
   </style>
-    <script type="importmap">
+  <script type="importmap">
   {
     "imports": {
       "three": "./three.js-dev/build/three.module.js",
@@ -31,114 +31,135 @@
     import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
     import POS from './js-aruco2-master/src/posit1.js';
 
-    // Elements & contexts
+    // ==== Constants & Config ====
+    const MARKER_SIZE = 0.04;           // Marker size in meters
+    const SMOOTHING_ALPHA = 0.2;        // EMA smoothing factor
+    const MAX_DISTANCE_JUMP = 1.5;      // Max allowed jump to filter outliers
+    const MAX_PATH_POINTS = 500;        // Max points in the path line
+
+    // ==== Elements & Contexts ====
     const video = document.getElementById('video');
-    const canvas = document.getElementById('canvas');
-    const ctx = canvas.getContext('2d');
+    const hiddenCanvas = document.getElementById('canvas');
+    const hiddenCtx = hiddenCanvas.getContext('2d');
+    const spaghettiCanvas = document.getElementById('spaghettiChartCanvas');
 
-    // Marker real size in meters
-    const markerSize = 0.04;
+    // ==== Tracker Class ====
+    class WarehouseTracker {
+      constructor() {
+        // POSIT setup for pose estimation
+        this.posit = new POS.Posit(MARKER_SIZE, hiddenCanvas.width);
 
-    // POSIT setup
-    const posit = new POS.Posit(markerSize, canvas.width);
+        // ArUco marker detector
+        this.detector = new AR.Detector({ dictionaryName: 'ARUCO' });
 
-    // Three.js setup
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-    const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('spaghettiChartCanvas') });
-    renderer.setSize(window.innerWidth, window.innerHeight);
+        // Three.js scene setup
+        this.scene = new THREE.Scene();
+        this.camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+        this.renderer = new THREE.WebGLRenderer({ canvas: spaghettiCanvas });
+        this.renderer.setSize(window.innerWidth, window.innerHeight);
 
-    const controls = new OrbitControls(camera, renderer.domElement);
-    controls.enableZoom = true;
-    controls.minDistance = 2;
-    controls.maxDistance = 50;
+        this.controls = new OrbitControls(this.camera, this.renderer.domElement);
+        this.controls.enableZoom = true;
+        this.controls.minDistance = 2;
+        this.controls.maxDistance = 50;
 
-    camera.position.set(0, 10, 20);
-    camera.up.set(0, 0, -1);
-    camera.lookAt(0, 0, 0);
-    controls.update();
+        this.camera.position.set(0, 10, 20);
+        this.camera.up.set(0, 0, -1);
+        this.camera.lookAt(0, 0, 0);
+        this.controls.update();
 
-    scene.add(new THREE.GridHelper(10, 10));
+        this.scene.add(new THREE.GridHelper(10, 10));
 
-    // Forklift path line
-    const lineMaterial = new THREE.LineBasicMaterial({ color: 0xff0000 });
-    let points = [];
-    let lineGeometry = new THREE.BufferGeometry().setFromPoints(points);
-    const line = new THREE.Line(lineGeometry, lineMaterial);
-    scene.add(line);
+        // Forklift path tracking setup
+        this.points = new Array(MAX_PATH_POINTS).fill(null);
+        this.currentPointIndex = 0;
 
-    // ArUco detector
-    const detector = new AR.Detector({ dictionaryName: 'ARUCO' });
+        // Create a fixed-size BufferGeometry for performance
+        const positions = new Float32Array(MAX_PATH_POINTS * 3); // x,y,z for each point
+        this.lineGeometry = new THREE.BufferGeometry();
+        this.lineGeometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+        this.lineMaterial = new THREE.LineBasicMaterial({ color: 0xff0000 });
+        this.line = new THREE.Line(this.lineGeometry, this.lineMaterial);
+        this.scene.add(this.line);
 
-    // Forklift position vector
-    const forkliftPos = new THREE.Vector3();
+        this.smoothedPos = null;
+        this.forkliftPos = new THREE.Vector3();
+        this.currentZoneId = null;
+        this.storedItems = [];
 
-    // Smoothing variables
-    let smoothedPos = null;
-    const smoothingAlpha = 0.2; // EMA smoothing factor
-    const maxDistanceJump = 1.5; // max allowed jump between frames to avoid outliers
+        this.animate = this.animate.bind(this);
+      }
 
-    // Current zone marker id (null if none)
-    let currentZoneId = null;
-
-    // Store captured items here
-    const storedItems = [];
-
-    // Access webcam
-    navigator.mediaDevices.getUserMedia({ video: true })
-      .then(stream => {
-        video.srcObject = stream;
-        video.onloadedmetadata = () => {
-          canvas.width = video.videoWidth;
-          canvas.height = video.videoHeight;
-          posit._width = canvas.width; // update POSIT width
-          animate();
+      estimatePose(marker) {
+        const corners = marker.corners.map(c => ({ x: c.x, y: c.y }));
+        const pose = this.posit.pose(corners);
+        if (!pose || !pose.bestRotation || !pose.bestTranslation) return null;
+        return {
+          translation: pose.bestTranslation,
+          rotation: pose.bestRotation
         };
-      })
-      .catch(err => {
-        alert('Error accessing webcam: ' + err);
-      });
+      }
 
-    // Estimate pose with POSIT for each marker
-    function estimatePose(marker) {
-      const corners = marker.corners.map(c => ({ x: c.x, y: c.y }));
-      const pose = posit.pose(corners);
-      if (!pose || !pose.bestRotation || !pose.bestTranslation) return null;
-      return {
-        translation: pose.bestTranslation,
-        rotation: pose.bestRotation
-      };
-    }
+      updatePathLine(newPos) {
+        // Add new point to the circular buffer
+        this.points[this.currentPointIndex] = newPos.clone();
+        this.currentPointIndex = (this.currentPointIndex + 1) % MAX_PATH_POINTS;
 
-    function animate() {
-      requestAnimationFrame(animate);
+        // Update BufferGeometry positions attribute
+        const positions = this.lineGeometry.attributes.position.array;
+        let idx = 0;
 
-      if (video.readyState === video.HAVE_ENOUGH_DATA) {
-        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-        const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-        const markers = detector.detect(imageData);
+        // Write points starting from currentPointIndex to the end, then beginning to currentPointIndex
+        for (let i = 0; i < MAX_PATH_POINTS; i++) {
+          const point = this.points[(this.currentPointIndex + i) % MAX_PATH_POINTS];
+          if (point) {
+            positions[idx++] = point.x;
+            positions[idx++] = point.y;
+            positions[idx++] = point.z;
+          } else {
+            // Fill empty space with last valid point or zeros
+            if (idx >= 3) {
+              positions[idx] = positions[idx - 3];
+              positions[idx+1] = positions[idx - 2];
+              positions[idx+2] = positions[idx - 1];
+            } else {
+              positions[idx++] = 0;
+              positions[idx++] = 0;
+              positions[idx++] = 0;
+            }
+            idx += 3;
+          }
+        }
+        this.lineGeometry.attributes.position.needsUpdate = true;
+      }
 
-        let sumPos = new THREE.Vector3(0, 0, 0);
-        let totalWeight = 0;
+      processFrame() {
+        if (video.readyState !== video.HAVE_ENOUGH_DATA) return;
+
+        // Draw video frame to hidden canvas for processing
+        hiddenCtx.drawImage(video, 0, 0, hiddenCanvas.width, hiddenCanvas.height);
+        const imageData = hiddenCtx.getImageData(0, 0, hiddenCanvas.width, hiddenCanvas.height);
+
+        // Detect markers
+        const markers = this.detector.detect(imageData);
+
+        let sumPos = new THREE.Vector3();
+        let validMarkersCount = 0;
         let closestMarker = null;
         let closestZ = Infinity;
 
         markers.forEach(marker => {
-          const pose = estimatePose(marker);
+          const pose = this.estimatePose(marker);
           if (!pose) return;
 
           const t = pose.translation;
-          if (
-            isNaN(t[0]) || isNaN(t[1]) || isNaN(t[2]) ||
-            !isFinite(t[0]) || !isFinite(t[1]) || !isFinite(t[2])
-          ) return;
+          if ([t[0], t[1], t[2]].some(v => !isFinite(v) || isNaN(v))) return;
 
           const pos = new THREE.Vector3(t[0], -t[1], -t[2]);
-          if (isNaN(pos.z) || !isFinite(pos.z)) return;
+          if (!isFinite(pos.z) || isNaN(pos.z)) return;
 
-          // Accumulate for average pose
           sumPos.add(pos);
-          totalWeight++;
+          validMarkersCount++;
 
           if (pos.z < closestZ) {
             closestZ = pos.z;
@@ -146,60 +167,79 @@
           }
         });
 
-        if (closestMarker) {
-          currentZoneId = closestMarker.id;
-        } else {
-          currentZoneId = null;
-        }
+        this.currentZoneId = closestMarker ? closestMarker.id : null;
 
-        if (totalWeight > 0) {
-          const avgPos = sumPos.divideScalar(totalWeight);
+        if (validMarkersCount > 0) {
+          const avgPos = sumPos.divideScalar(validMarkersCount);
 
-          if (!smoothedPos) {
-            smoothedPos = avgPos.clone();
+          if (!this.smoothedPos) {
+            this.smoothedPos = avgPos.clone();
           } else {
-            if (smoothedPos.distanceTo(avgPos) > maxDistanceJump) {
-              // Skip big jumps (likely outliers)
-              console.warn('Outlier detected, skipping frame');
+            // Ignore large jumps
+            if (this.smoothedPos.distanceTo(avgPos) <= MAX_DISTANCE_JUMP) {
+              this.smoothedPos.lerp(avgPos, SMOOTHING_ALPHA);
             } else {
-              smoothedPos.lerp(avgPos, smoothingAlpha);
+              console.warn('Outlier detected, skipping frame');
             }
           }
 
-          forkliftPos.copy(smoothedPos);
-
-          // Bonus tip: push every frame for smooth continuous line
-          points.push(forkliftPos.clone());
-          if (points.length > 500) points.shift();
-
-          line.geometry.dispose();
-          line.geometry = new THREE.BufferGeometry().setFromPoints(points);
+          this.forkliftPos.copy(this.smoothedPos);
+          this.updatePathLine(this.forkliftPos);
         }
 
-        controls.update();
-        renderer.render(scene, camera);
+        this.controls.update();
+        this.renderer.render(this.scene, this.camera);
+      }
+
+      animate() {
+        requestAnimationFrame(this.animate);
+        this.processFrame();
+      }
+
+      captureItem(itemID) {
+        if (!itemID) return alert('Item ID is required');
+
+        this.storedItems.push({
+          id: itemID,
+          position: this.forkliftPos.clone(),
+          zoneMarkerId: this.currentZoneId || 'Unknown',
+          timestamp: new Date()
+        });
+
+        alert(`Captured ${itemID} at position (${this.forkliftPos.x.toFixed(2)}, ${this.forkliftPos.y.toFixed(2)}, ${this.forkliftPos.z.toFixed(2)}) in zone (marker ID): ${this.currentZoneId || 'Unknown'}`);
+        console.log('Stored item', itemID, 'at position', this.forkliftPos, 'in zone marker ID', this.currentZoneId);
       }
     }
 
-    document.getElementById('captureButton').addEventListener('click', () => {
-      const itemID = prompt('Enter Item ID:');
-      if (!itemID) return alert('Item ID is required');
+    // ==== Initialization ====
+    const tracker = new WarehouseTracker();
 
-      storedItems.push({
-        id: itemID,
-        position: forkliftPos.clone(),
-        zoneMarkerId: currentZoneId || 'Unknown',
-        timestamp: new Date()
+    // Setup webcam feed and start animation
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
+        video.srcObject = stream;
+        video.onloadedmetadata = () => {
+          hiddenCanvas.width = video.videoWidth;
+          hiddenCanvas.height = video.videoHeight;
+          tracker.posit._width = hiddenCanvas.width; // update POSIT width
+          tracker.animate();
+        };
+      })
+      .catch(err => {
+        alert('Error accessing webcam: ' + err);
       });
 
-      alert(`Captured ${itemID} at position (${forkliftPos.x.toFixed(2)}, ${forkliftPos.y.toFixed(2)}, ${forkliftPos.z.toFixed(2)}) in zone (marker ID): ${currentZoneId || 'Unknown'}`);
-      console.log('Stored item', itemID, 'at position', forkliftPos, 'in zone marker ID', currentZoneId);
+    // Capture button event
+    document.getElementById('captureButton').addEventListener('click', () => {
+      const itemID = prompt('Enter Item ID:');
+      tracker.captureItem(itemID);
     });
 
+    // Handle window resizing
     window.addEventListener('resize', () => {
-      camera.aspect = window.innerWidth / window.innerHeight;
-      camera.updateProjectionMatrix();
-      renderer.setSize(window.innerWidth, window.innerHeight);
+      tracker.camera.aspect = window.innerWidth / window.innerHeight;
+      tracker.camera.updateProjectionMatrix();
+      tracker.renderer.setSize(window.innerWidth, window.innerHeight);
     });
   </script>
 </body>
